<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SLE4442Activity">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap">

        <Button
            android:id="@+id/btn_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/read"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/write"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_key"
            android:textAllCaps="false"/>


        <Button
            android:id="@+id/btn_change_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_error_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_count"
            android:textAllCaps="false"/>

    </com.google.android.flexbox.FlexboxLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>
    </ScrollView>
</LinearLayout>