<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_paper_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_print_paper_out"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_default_print"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_print_def"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_print_above"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_print_above_all"
                android:textAllCaps="false"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specified_text"
            android:textColor="#000"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#009486"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_text"/>

                <EditText
                    android:id="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/print_text_hint"
                    android:maxLines="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_text_size"/>

                <Spinner
                    android:id="@+id/sp_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_font_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_alignment"/>

                <Spinner
                    android:id="@+id/sp_align"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_align"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_speed"/>

                <Spinner
                    android:id="@+id/sp_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_speed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_line_spacing"/>

                <EditText
                    android:id="@+id/et_row_gap"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_print_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_text"
                android:textAllCaps="false"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/print_m"
            android:textColor="#000"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#009486"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_text"/>

                <EditText
                    android:id="@+id/et_text_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/print_text_hint"
                    android:maxLines="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/print_text_size"/>

                <EditText
                    android:id="@+id/et_text_size_m"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_font"/>

                <Spinner
                    android:id="@+id/sp_font_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_font"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_font_style"/>

                <Spinner
                    android:id="@+id/sp_font_style_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_font_style"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_alignment"/>

                <Spinner
                    android:id="@+id/sp_align_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_align_layout"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_scaleX"/>

                <EditText
                    android:id="@+id/et_scale"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_col_spacing"/>

                <EditText
                    android:id="@+id/et_letter_spacing"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <CheckBox
                android:id="@+id/check_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_underline"/>


            <Button
                android:id="@+id/btn_print_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_print_m"
                android:textAllCaps="false"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/print_qr"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#009486"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_qr_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/print_qr_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/print_width"/>

                <EditText
                    android:id="@+id/et_qr_width"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/print_height"/>

                <EditText
                    android:id="@+id/et_qr_height"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_alignment"/>

                <Spinner
                    android:id="@+id/sp_align_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/print_align_layout"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_print_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_qr"
                android:textAllCaps="false"/>
        </LinearLayout>


        <RadioButton
            android:id="@+id/rb_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/print_bar_code"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#009486"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_text_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/print_qr_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/print_width"/>

                <EditText
                    android:id="@+id/et_bar_width"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/print_height"/>

                <EditText
                    android:id="@+id/et_bar_height"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_alignment"/>

                <Spinner
                    android:id="@+id/sp_align_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:entries="@array/print_align"/>

            </LinearLayout>

            <CheckBox
                android:id="@+id/check_show_under"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_show_under"/>

            <Button
                android:id="@+id/btn_print_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_print_bar"
                android:textAllCaps="false"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/print_pic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#009486"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_def_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_def_pic"/>

                <Button
                    android:id="@+id/btn_choose_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_choose_pic"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_alignment"/>

                <Spinner
                    android:id="@+id/sp_align_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:entries="@array/print_align_layout"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_print_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_print_pic"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>