<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:maxLines="3"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_qrcode"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan_qrcode"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_long_press_to_identify_qrcode"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"/>
</LinearLayout>